// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`download logs options in logs dock tab opening pod logs when logs available renders 1`] = `
<body>
  <div>
    <div
      class="Notifications flex column align-flex-end"
    />
    <div
      class="mainLayout"
      style="--sidebar-width: 200px;"
    >
      <div
        class="sidebar"
      >
        <div
          class="flex flex-col"
          data-testid="cluster-sidebar"
        >
          <div
            class="SidebarCluster"
          >
            <div
              class="Avatar rounded loadingAvatar"
              style="width: 40px; height: 40px;"
            >
              ??
            </div>
            <div
              class="loadingClusterName"
            />
          </div>
          <div
            class="sidebarNav sidebar-active-status"
          >
            <div
              class="SidebarItem"
              data-is-active-test="true"
              data-testid="sidebar-item-workloads"
            >
              <a
                aria-current="page"
                class="navItem active"
                data-testid="sidebar-item-link-for-workloads"
                href="/"
              >
                <i
                  class="Icon svg focusable"
                >
                  <span
                    class="icon"
                  />
                </i>
                <span>
                  Workloads
                </span>
                <i
                  class="Icon expandIcon material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="keyboard_arrow_down"
                  >
                    keyboard_arrow_down
                  </span>
                </i>
              </a>
            </div>
            <div
              class="SidebarItem"
              data-is-active-test="false"
              data-testid="sidebar-item-config"
            >
              <a
                class="navItem"
                data-testid="sidebar-item-link-for-config"
                href="/"
              >
                <i
                  class="Icon material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="list"
                  >
                    list
                  </span>
                </i>
                <span>
                  Config
                </span>
              </a>
            </div>
            <div
              class="SidebarItem"
              data-is-active-test="false"
              data-testid="sidebar-item-network"
            >
              <a
                class="navItem"
                data-testid="sidebar-item-link-for-network"
                href="/"
              >
                <i
                  class="Icon material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="device_hub"
                  >
                    device_hub
                  </span>
                </i>
                <span>
                  Network
                </span>
                <i
                  class="Icon expandIcon material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="keyboard_arrow_down"
                  >
                    keyboard_arrow_down
                  </span>
                </i>
              </a>
            </div>
            <div
              class="SidebarItem"
              data-is-active-test="false"
              data-testid="sidebar-item-storage"
            >
              <a
                class="navItem"
                data-testid="sidebar-item-link-for-storage"
                href="/"
              >
                <i
                  class="Icon material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="storage"
                  >
                    storage
                  </span>
                </i>
                <span>
                  Storage
                </span>
              </a>
            </div>
            <div
              class="SidebarItem"
              data-is-active-test="false"
              data-testid="sidebar-item-helm"
            >
              <a
                class="navItem"
                data-testid="sidebar-item-link-for-helm"
                href="/"
              >
                <i
                  class="Icon svg focusable"
                >
                  <span
                    class="icon"
                  />
                </i>
                <span>
                  Helm
                </span>
                <i
                  class="Icon expandIcon material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="keyboard_arrow_down"
                  >
                    keyboard_arrow_down
                  </span>
                </i>
              </a>
            </div>
            <div
              class="SidebarItem"
              data-is-active-test="false"
              data-testid="sidebar-item-user-management"
            >
              <a
                class="navItem"
                data-testid="sidebar-item-link-for-user-management"
                href="/"
              >
                <i
                  class="Icon material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="security"
                  >
                    security
                  </span>
                </i>
                <span>
                  Access Control
                </span>
              </a>
            </div>
            <div
              class="SidebarItem"
              data-is-active-test="false"
              data-testid="sidebar-item-custom-resources"
            >
              <a
                class="navItem"
                data-testid="sidebar-item-link-for-custom-resources"
                href="/"
              >
                <i
                  class="Icon material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="extension"
                  >
                    extension
                  </span>
                </i>
                <span>
                  Custom Resources
                </span>
                <i
                  class="Icon expandIcon material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="keyboard_arrow_down"
                  >
                    keyboard_arrow_down
                  </span>
                </i>
              </a>
            </div>
          </div>
        </div>
        <div
          class="ResizingAnchor horizontal trailing"
        />
      </div>
      <div
        class="contents"
      >
        <div
          class="TabLayout"
          data-testid="tab-layout"
        >
          <div
            class="Tabs center scrollable"
          >
            <div
              class="Tab flex gaps align-center active"
              data-is-active-test="true"
              data-testid="tab-link-for-overview"
              role="tab"
              tabindex="0"
            >
              <div
                class="label"
              >
                Overview
              </div>
            </div>
          </div>
          <main
            class="scrollable"
          >
            <div
              class="WorkloadsOverview flex column gaps"
              data-testid="page-for-workloads-overview"
            >
              <div
                class="header flex gaps align-center"
              >
                <h5
                  class="box grow"
                >
                  Overview
                </h5>
                <div
                  class="NamespaceSelectFilterParent"
                  data-testid="namespace-select-filter"
                >
                  <div
                    class="Select theme-dark NamespaceSelect NamespaceSelectFilter css-b62m3t-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-overview-namespace-select-filter-input-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="Select__control css-13cymwt-control"
                    >
                      <div
                        class="Select__value-container Select__value-container--is-multi css-1fdsijx-ValueContainer"
                      >
                        <div
                          class="Select__placeholder css-1jqq78o-placeholder"
                          id="react-select-overview-namespace-select-filter-input-placeholder"
                        >
                          All namespaces
                        </div>
                        <div
                          class="Select__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-describedby="react-select-overview-namespace-select-filter-input-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="Select__input"
                            id="overview-namespace-select-filter-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="Select__indicator-separator css-1u9des2-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="Select__indicator Select__dropdown-indicator css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="OverviewStatuses"
              >
                <div
                  class="workloads"
                />
              </div>
            </div>
          </main>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="Dock isOpen"
          tabindex="-1"
        >
          <div
            class="ResizingAnchor vertical leading"
          />
          <div
            class="tabs-container flex align-center"
          >
            <div
              class="dockTabs"
              role="tablist"
            >
              <div
                class="Tabs tabs"
              >
                <div
                  class="Tab flex gaps align-center DockTab active"
                  data-testid="dock-tab-for-log-tab-some-irrelevant-random-id"
                  id="tab-log-tab-some-irrelevant-random-id"
                  role="tab"
                  tabindex="0"
                >
                  <i
                    class="Icon material focusable small"
                  >
                    <span
                      class="icon"
                      data-icon-name="subject"
                    >
                      subject
                    </span>
                  </i>
                  <div
                    class="label"
                  >
                    <div
                      class="flex align-center"
                    >
                      <span
                        class="title"
                      >
                        Pod dockerExporter
                      </span>
                      <div
                        class="close"
                      >
                        <i
                          class="Icon material interactive focusable small"
                          data-testid="dock-tab-close-for-log-tab-some-irrelevant-random-id"
                          tabindex="0"
                        >
                          <span
                            class="icon"
                            data-icon-name="close"
                          >
                            close
                          </span>
                        </i>
                        <div
                          data-testid="tooltip-content-for-dock-tab-close-for-log-tab-some-irrelevant-random-id"
                        >
                          Close ⌘+W
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="toolbar flex gaps align-center box grow"
            >
              <div
                class="dock-menu box grow"
              >
                <i
                  class="Icon new-dock-tab material interactive focusable"
                  id="menu-actions-for-dock"
                  tabindex="0"
                >
                  <span
                    class="icon"
                    data-icon-name="add"
                  >
                    add
                  </span>
                </i>
                <div>
                  New tab
                </div>
              </div>
              <i
                class="Icon material interactive focusable"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="fullscreen"
                >
                  fullscreen
                </span>
              </i>
              <div>
                Fit to window
              </div>
              <i
                class="Icon material interactive focusable"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="keyboard_arrow_down"
                >
                  keyboard_arrow_down
                </span>
              </i>
              <div>
                Minimize
              </div>
            </div>
          </div>
          <div
            class="tab-content pod-logs"
            data-testid="dock-tab-content-for-log-tab-some-irrelevant-random-id"
            style="flex-basis: 300px;"
          >
            <div
              class="PodLogs flex column"
            >
              <div
                class="InfoPanel flex gaps align-center"
              >
                <div
                  class="controls"
                >
                  <div
                    class="flex gaps"
                  >
                    <div
                      class="LogResourceSelector flex gaps align-center"
                    >
                      <span>
                        Namespace
                      </span>
                       
                      <div
                        class="badge"
                        data-testid="namespace-badge"
                      >
                        default
                      </div>
                      <span>
                        Pod
                      </span>
                      <div
                        class="Select theme-dark pod-selector css-b62m3t-container"
                      >
                        <span
                          class="css-1f43avz-a11yText-A11yText"
                          id="react-select-4-live-region"
                        />
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          class="css-1f43avz-a11yText-A11yText"
                        />
                        <div
                          class="Select__control css-13cymwt-control"
                        >
                          <div
                            class="Select__value-container Select__value-container--has-value css-1fdsijx-ValueContainer"
                          >
                            <div
                              class="Select__single-value css-1dimb5e-singleValue"
                            >
                              dockerExporter
                            </div>
                            <div
                              class="Select__input-container css-qbdosj-Input"
                              data-value=""
                            >
                              <input
                                aria-autocomplete="list"
                                aria-expanded="false"
                                aria-haspopup="true"
                                autocapitalize="none"
                                autocomplete="off"
                                autocorrect="off"
                                class="Select__input"
                                id="react-select-4-input"
                                role="combobox"
                                spellcheck="false"
                                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                tabindex="0"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                          <div
                            class="Select__indicators css-1hb7zxy-IndicatorsContainer"
                          >
                            <span
                              class="Select__indicator-separator css-1u9des2-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              class="Select__indicator Select__dropdown-indicator css-1xc3v61-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                      <span>
                        Container
                      </span>
                      <div
                        class="Select theme-dark container-selector css-b62m3t-container"
                      >
                        <span
                          class="css-1f43avz-a11yText-A11yText"
                          id="react-select-container-selector-input-live-region"
                        />
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          class="css-1f43avz-a11yText-A11yText"
                        />
                        <div
                          class="Select__control css-13cymwt-control"
                        >
                          <div
                            class="Select__value-container Select__value-container--has-value css-1fdsijx-ValueContainer"
                          >
                            <div
                              class="Select__single-value css-1dimb5e-singleValue"
                            >
                              docker-exporter
                            </div>
                            <div
                              class="Select__input-container css-qbdosj-Input"
                              data-value=""
                            >
                              <input
                                aria-autocomplete="list"
                                aria-expanded="false"
                                aria-haspopup="true"
                                autocapitalize="none"
                                autocomplete="off"
                                autocorrect="off"
                                class="Select__input"
                                id="container-selector-input"
                                role="combobox"
                                spellcheck="false"
                                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                tabindex="0"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                          <div
                            class="Select__indicators css-1hb7zxy-IndicatorsContainer"
                          >
                            <span
                              class="Select__indicator-separator css-1u9des2-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              class="Select__indicator Select__dropdown-indicator css-1xc3v61-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="LogSearch flex box grow justify-flex-end gaps align-center"
                    >
                      <div
                        class="Input SearchInput focused"
                      >
                        <label
                          class="input-area flex gaps align-center"
                          id=""
                        >
                          <input
                            class="input box grow"
                            placeholder="Search..."
                            spellcheck="false"
                            value=""
                          />
                          <i
                            class="Icon material focusable small"
                          >
                            <span
                              class="icon"
                              data-icon-name="search"
                            >
                              search
                            </span>
                          </i>
                        </label>
                        <div
                          class="input-info flex gaps"
                        />
                      </div>
                      <i
                        class="Icon material interactive disabled focusable"
                      >
                        <span
                          class="icon"
                          data-icon-name="keyboard_arrow_up"
                        >
                          keyboard_arrow_up
                        </span>
                      </i>
                      <div>
                        Previous
                      </div>
                      <i
                        class="Icon material interactive disabled focusable"
                      >
                        <span
                          class="icon"
                          data-icon-name="keyboard_arrow_down"
                        >
                          keyboard_arrow_down
                        </span>
                      </i>
                      <div>
                        Next
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="LogList flex"
              >
                <div
                  class="VirtualList box grow"
                >
                  <div>
                    <div
                      class="list"
                      style="position: relative; height: 420000px; width: 100%; overflow: auto; will-change: transform; direction: ltr;"
                    >
                      <div
                        style="height: 18px; width: 100%;"
                      >
                        <div
                          class="LogRow"
                          style="position: absolute; left: 0px; top: 0px; height: 18px; width: 100%;"
                        >
                          <span>
                            some-logs
                          </span>
                          <br />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="controls"
                data-testid="log-controls"
              >
                <div>
                  <span>
                    Logs from
                     
                    <b>
                      Invalid Date
                    </b>
                  </span>
                </div>
                <div
                  class="flex gaps align-center"
                >
                  <label
                    class="Checkbox flex align-center show-timestamps"
                  >
                    <input
                      type="checkbox"
                    />
                    <i
                      class="box flex align-center"
                    />
                    <span
                      class="label"
                    >
                      Show timestamps
                    </span>
                  </label>
                  <label
                    class="Checkbox flex align-center show-previous checked"
                  >
                    <input
                      checked=""
                      type="checkbox"
                    />
                    <i
                      class="box flex align-center"
                    />
                    <span
                      class="label"
                    >
                      Show previous terminated container
                    </span>
                  </label>
                  <div>
                    <div
                      id="download-logs-dropdown"
                    >
                      <button
                        class="dropdown"
                        data-testid="download-logs-dropdown"
                      >
                        Download
                        <i
                          class="Icon material focusable smallest"
                        >
                          <span
                            class="icon"
                            data-icon-name="arrow_drop_down"
                          >
                            arrow_drop_down
                          </span>
                        </i>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`download logs options in logs dock tab opening pod logs when logs not available renders 1`] = `
<body>
  <div>
    <div
      class="Notifications flex column align-flex-end"
    />
    <div
      class="mainLayout"
      style="--sidebar-width: 200px;"
    >
      <div
        class="sidebar"
      >
        <div
          class="flex flex-col"
          data-testid="cluster-sidebar"
        >
          <div
            class="SidebarCluster"
          >
            <div
              class="Avatar rounded loadingAvatar"
              style="width: 40px; height: 40px;"
            >
              ??
            </div>
            <div
              class="loadingClusterName"
            />
          </div>
          <div
            class="sidebarNav sidebar-active-status"
          >
            <div
              class="SidebarItem"
              data-is-active-test="true"
              data-testid="sidebar-item-workloads"
            >
              <a
                aria-current="page"
                class="navItem active"
                data-testid="sidebar-item-link-for-workloads"
                href="/"
              >
                <i
                  class="Icon svg focusable"
                >
                  <span
                    class="icon"
                  />
                </i>
                <span>
                  Workloads
                </span>
                <i
                  class="Icon expandIcon material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="keyboard_arrow_down"
                  >
                    keyboard_arrow_down
                  </span>
                </i>
              </a>
            </div>
            <div
              class="SidebarItem"
              data-is-active-test="false"
              data-testid="sidebar-item-config"
            >
              <a
                class="navItem"
                data-testid="sidebar-item-link-for-config"
                href="/"
              >
                <i
                  class="Icon material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="list"
                  >
                    list
                  </span>
                </i>
                <span>
                  Config
                </span>
              </a>
            </div>
            <div
              class="SidebarItem"
              data-is-active-test="false"
              data-testid="sidebar-item-network"
            >
              <a
                class="navItem"
                data-testid="sidebar-item-link-for-network"
                href="/"
              >
                <i
                  class="Icon material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="device_hub"
                  >
                    device_hub
                  </span>
                </i>
                <span>
                  Network
                </span>
                <i
                  class="Icon expandIcon material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="keyboard_arrow_down"
                  >
                    keyboard_arrow_down
                  </span>
                </i>
              </a>
            </div>
            <div
              class="SidebarItem"
              data-is-active-test="false"
              data-testid="sidebar-item-storage"
            >
              <a
                class="navItem"
                data-testid="sidebar-item-link-for-storage"
                href="/"
              >
                <i
                  class="Icon material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="storage"
                  >
                    storage
                  </span>
                </i>
                <span>
                  Storage
                </span>
              </a>
            </div>
            <div
              class="SidebarItem"
              data-is-active-test="false"
              data-testid="sidebar-item-helm"
            >
              <a
                class="navItem"
                data-testid="sidebar-item-link-for-helm"
                href="/"
              >
                <i
                  class="Icon svg focusable"
                >
                  <span
                    class="icon"
                  />
                </i>
                <span>
                  Helm
                </span>
                <i
                  class="Icon expandIcon material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="keyboard_arrow_down"
                  >
                    keyboard_arrow_down
                  </span>
                </i>
              </a>
            </div>
            <div
              class="SidebarItem"
              data-is-active-test="false"
              data-testid="sidebar-item-user-management"
            >
              <a
                class="navItem"
                data-testid="sidebar-item-link-for-user-management"
                href="/"
              >
                <i
                  class="Icon material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="security"
                  >
                    security
                  </span>
                </i>
                <span>
                  Access Control
                </span>
              </a>
            </div>
            <div
              class="SidebarItem"
              data-is-active-test="false"
              data-testid="sidebar-item-custom-resources"
            >
              <a
                class="navItem"
                data-testid="sidebar-item-link-for-custom-resources"
                href="/"
              >
                <i
                  class="Icon material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="extension"
                  >
                    extension
                  </span>
                </i>
                <span>
                  Custom Resources
                </span>
                <i
                  class="Icon expandIcon material focusable"
                >
                  <span
                    class="icon"
                    data-icon-name="keyboard_arrow_down"
                  >
                    keyboard_arrow_down
                  </span>
                </i>
              </a>
            </div>
          </div>
        </div>
        <div
          class="ResizingAnchor horizontal trailing"
        />
      </div>
      <div
        class="contents"
      >
        <div
          class="TabLayout"
          data-testid="tab-layout"
        >
          <div
            class="Tabs center scrollable"
          >
            <div
              class="Tab flex gaps align-center active"
              data-is-active-test="true"
              data-testid="tab-link-for-overview"
              role="tab"
              tabindex="0"
            >
              <div
                class="label"
              >
                Overview
              </div>
            </div>
          </div>
          <main
            class="scrollable"
          >
            <div
              class="WorkloadsOverview flex column gaps"
              data-testid="page-for-workloads-overview"
            >
              <div
                class="header flex gaps align-center"
              >
                <h5
                  class="box grow"
                >
                  Overview
                </h5>
                <div
                  class="NamespaceSelectFilterParent"
                  data-testid="namespace-select-filter"
                >
                  <div
                    class="Select theme-dark NamespaceSelect NamespaceSelectFilter css-b62m3t-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-overview-namespace-select-filter-input-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="Select__control css-13cymwt-control"
                    >
                      <div
                        class="Select__value-container Select__value-container--is-multi css-1fdsijx-ValueContainer"
                      >
                        <div
                          class="Select__placeholder css-1jqq78o-placeholder"
                          id="react-select-overview-namespace-select-filter-input-placeholder"
                        >
                          All namespaces
                        </div>
                        <div
                          class="Select__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-describedby="react-select-overview-namespace-select-filter-input-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="Select__input"
                            id="overview-namespace-select-filter-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="Select__indicator-separator css-1u9des2-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="Select__indicator Select__dropdown-indicator css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="OverviewStatuses"
              >
                <div
                  class="workloads"
                />
              </div>
            </div>
          </main>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="Dock isOpen"
          tabindex="-1"
        >
          <div
            class="ResizingAnchor vertical leading"
          />
          <div
            class="tabs-container flex align-center"
          >
            <div
              class="dockTabs"
              role="tablist"
            >
              <div
                class="Tabs tabs"
              >
                <div
                  class="Tab flex gaps align-center DockTab active"
                  data-testid="dock-tab-for-log-tab-some-irrelevant-random-id"
                  id="tab-log-tab-some-irrelevant-random-id"
                  role="tab"
                  tabindex="0"
                >
                  <i
                    class="Icon material focusable small"
                  >
                    <span
                      class="icon"
                      data-icon-name="subject"
                    >
                      subject
                    </span>
                  </i>
                  <div
                    class="label"
                  >
                    <div
                      class="flex align-center"
                    >
                      <span
                        class="title"
                      >
                        Pod dockerExporter
                      </span>
                      <div
                        class="close"
                      >
                        <i
                          class="Icon material interactive focusable small"
                          data-testid="dock-tab-close-for-log-tab-some-irrelevant-random-id"
                          tabindex="0"
                        >
                          <span
                            class="icon"
                            data-icon-name="close"
                          >
                            close
                          </span>
                        </i>
                        <div
                          data-testid="tooltip-content-for-dock-tab-close-for-log-tab-some-irrelevant-random-id"
                        >
                          Close ⌘+W
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="toolbar flex gaps align-center box grow"
            >
              <div
                class="dock-menu box grow"
              >
                <i
                  class="Icon new-dock-tab material interactive focusable"
                  id="menu-actions-for-dock"
                  tabindex="0"
                >
                  <span
                    class="icon"
                    data-icon-name="add"
                  >
                    add
                  </span>
                </i>
                <div>
                  New tab
                </div>
              </div>
              <i
                class="Icon material interactive focusable"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="fullscreen"
                >
                  fullscreen
                </span>
              </i>
              <div>
                Fit to window
              </div>
              <i
                class="Icon material interactive focusable"
                tabindex="0"
              >
                <span
                  class="icon"
                  data-icon-name="keyboard_arrow_down"
                >
                  keyboard_arrow_down
                </span>
              </i>
              <div>
                Minimize
              </div>
            </div>
          </div>
          <div
            class="tab-content pod-logs"
            data-testid="dock-tab-content-for-log-tab-some-irrelevant-random-id"
            style="flex-basis: 300px;"
          >
            <div
              class="PodLogs flex column"
            >
              <div
                class="InfoPanel flex gaps align-center"
              >
                <div
                  class="controls"
                >
                  <div
                    class="flex gaps"
                  >
                    <div
                      class="LogResourceSelector flex gaps align-center"
                    >
                      <span>
                        Namespace
                      </span>
                       
                      <div
                        class="badge"
                        data-testid="namespace-badge"
                      >
                        default
                      </div>
                      <span>
                        Pod
                      </span>
                      <div
                        class="Select theme-dark pod-selector css-b62m3t-container"
                      >
                        <span
                          class="css-1f43avz-a11yText-A11yText"
                          id="react-select-2-live-region"
                        />
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          class="css-1f43avz-a11yText-A11yText"
                        />
                        <div
                          class="Select__control css-13cymwt-control"
                        >
                          <div
                            class="Select__value-container Select__value-container--has-value css-1fdsijx-ValueContainer"
                          >
                            <div
                              class="Select__single-value css-1dimb5e-singleValue"
                            >
                              dockerExporter
                            </div>
                            <div
                              class="Select__input-container css-qbdosj-Input"
                              data-value=""
                            >
                              <input
                                aria-autocomplete="list"
                                aria-expanded="false"
                                aria-haspopup="true"
                                autocapitalize="none"
                                autocomplete="off"
                                autocorrect="off"
                                class="Select__input"
                                id="react-select-2-input"
                                role="combobox"
                                spellcheck="false"
                                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                tabindex="0"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                          <div
                            class="Select__indicators css-1hb7zxy-IndicatorsContainer"
                          >
                            <span
                              class="Select__indicator-separator css-1u9des2-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              class="Select__indicator Select__dropdown-indicator css-1xc3v61-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                      <span>
                        Container
                      </span>
                      <div
                        class="Select theme-dark container-selector css-b62m3t-container"
                      >
                        <span
                          class="css-1f43avz-a11yText-A11yText"
                          id="react-select-container-selector-input-live-region"
                        />
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          class="css-1f43avz-a11yText-A11yText"
                        />
                        <div
                          class="Select__control css-13cymwt-control"
                        >
                          <div
                            class="Select__value-container Select__value-container--has-value css-1fdsijx-ValueContainer"
                          >
                            <div
                              class="Select__single-value css-1dimb5e-singleValue"
                            >
                              docker-exporter
                            </div>
                            <div
                              class="Select__input-container css-qbdosj-Input"
                              data-value=""
                            >
                              <input
                                aria-autocomplete="list"
                                aria-expanded="false"
                                aria-haspopup="true"
                                autocapitalize="none"
                                autocomplete="off"
                                autocorrect="off"
                                class="Select__input"
                                id="container-selector-input"
                                role="combobox"
                                spellcheck="false"
                                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                tabindex="0"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                          <div
                            class="Select__indicators css-1hb7zxy-IndicatorsContainer"
                          >
                            <span
                              class="Select__indicator-separator css-1u9des2-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              class="Select__indicator Select__dropdown-indicator css-1xc3v61-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="LogSearch flex box grow justify-flex-end gaps align-center"
                    >
                      <div
                        class="Input SearchInput focused"
                      >
                        <label
                          class="input-area flex gaps align-center"
                          id=""
                        >
                          <input
                            class="input box grow"
                            placeholder="Search..."
                            spellcheck="false"
                            value=""
                          />
                          <i
                            class="Icon material focusable small"
                          >
                            <span
                              class="icon"
                              data-icon-name="search"
                            >
                              search
                            </span>
                          </i>
                        </label>
                        <div
                          class="input-info flex gaps"
                        />
                      </div>
                      <i
                        class="Icon material interactive disabled focusable"
                      >
                        <span
                          class="icon"
                          data-icon-name="keyboard_arrow_up"
                        >
                          keyboard_arrow_up
                        </span>
                      </i>
                      <div>
                        Previous
                      </div>
                      <i
                        class="Icon material interactive disabled focusable"
                      >
                        <span
                          class="icon"
                          data-icon-name="keyboard_arrow_down"
                        >
                          keyboard_arrow_down
                        </span>
                      </i>
                      <div>
                        Next
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="LogList flex box grow align-center justify-center"
              >
                There are no logs available for container
                 
                docker-exporter
              </div>
              <div
                class="controls"
                data-testid="log-controls"
              >
                <div />
                <div
                  class="flex gaps align-center"
                >
                  <label
                    class="Checkbox flex align-center show-timestamps"
                  >
                    <input
                      type="checkbox"
                    />
                    <i
                      class="box flex align-center"
                    />
                    <span
                      class="label"
                    >
                      Show timestamps
                    </span>
                  </label>
                  <label
                    class="Checkbox flex align-center show-previous checked"
                  >
                    <input
                      checked=""
                      type="checkbox"
                    />
                    <i
                      class="box flex align-center"
                    />
                    <span
                      class="label"
                    >
                      Show previous terminated container
                    </span>
                  </label>
                  <div>
                    <div
                      id="download-logs-dropdown"
                    >
                      <button
                        class="dropdown"
                        data-testid="download-logs-dropdown"
                        disabled=""
                      >
                        Download
                        <i
                          class="Icon material focusable smallest"
                        >
                          <span
                            class="icon"
                            data-icon-name="arrow_drop_down"
                          >
                            arrow_drop_down
                          </span>
                        </i>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
